Fixed Hulu Card title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="card bg-transparent" style="width: 18rem;">
                         <img src="./Assets/projectspics/staticlayout.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="Hulu Static Layout">Card title</h5>
+                            <h5 class="Hulu Static Layout">Hulu Static Layout</h5>
                             <p class="card-text">A recreation of the Hulu home page using Flexbox.</p>
                             <a href="https://howelldean81.github.io/static_layout/" target= "blank" class="btn btn-primary">Visit
                                 Project</a>
