Added Credly icon and link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Good-coin</h5>
                             <p class="card-text">Into cryptocurrency? Get live results on this page using the Coinlayer API.</p>
-                            <a href="https://howelldean81.github.io/GoodCoin/" target= "blank" class="btn btn-primary">Visit
+                            <a href="https://goodcoin-8310a.web.app/" target= "blank" class="btn btn-primary">Visit
                                 Project</a>
                         </div>
                     </div>
@@ -125,6 +125,8 @@
                             src="./Assets/icons/600px-LinkedIn_logo_In-Black.svg.png" alt=""></a>
                     <a class="nav-link" href="https://github.com/howelldean81" target="blank"><img
                             src="./Assets/icons/img_529753.png" alt=""></a>
+                    <a class="nav-link" href="https://www.credly.com/users/dean-howell" target="blank"><img
+                        src="./Assets/icons/credly-icon.png" alt=""></a>
                 </div>
             </div>
         </div>
