--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
         </div>
         <div class="container row projects-box">
             <h1 id="Projects">Projects</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card bg-transparent" style="width: 18rem;">
+                        <img src="./Assets/projectspics/csscreature.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">CSS Creature</h5>
+                            <p class="card-text">Using box-shadows in pure CSS to recreate a popular video game character.</p>
+                            <a href="https://codepen.io/segaboy81/pen/oNBjVWx" target= "blank" class="btn btn-primary">Visit Project</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col">
                     <div class="card bg-transparent" style="width: 18rem;">
                         <img src="./Assets/projectspics/staticlayout.png" class="card-img-top" alt="...">
@@ -47,16 +57,6 @@
                             <p class="card-text">A recreation of the Hulu home page using Flexbox.</p>
                             <a href="https://howelldean81.github.io/static_layout/" target= "blank" class="btn btn-primary">Visit
                                 Project</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card bg-transparent" style="width: 18rem;">
-                        <img src="./Assets/projectspics/csscreature.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">CSS Creature</h5>
-                            <p class="card-text">Using box-shadows in pure CSS to recreate a popular video game character.</p>
-                            <a href="https://codepen.io/segaboy81/pen/oNBjVWx" target= "blank" class="btn btn-primary">Visit Project</a>
                         </div>
                     </div>
                 </div>
@@ -80,6 +80,22 @@
                             <p class="card-text">Into cryptocurrency? Get live results on this page using the Coinlayer API.</p>
                             <a href="https://goodcoin-8310a.web.app/" target= "blank" class="btn btn-primary">Visit
                                 Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card bg-transparent" style="width: 18rem;">
+                        <img src="./Assets/projectspics/comingsoon.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Badge TBA</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card bg-transparent" style="width: 18rem;">
+                        <img src="./Assets/projectspics/comingsoon.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Badge TBA</h5>
                         </div>
                     </div>
                 </div>
